# polyglot-devcontainers

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  COMMUNITY.md  CONTRIBUTING.md  GOVERNANCE.md  PROJECT_PRINCIPLES.md  README.md  ROADMAP.md  TASK.md  Taskfile.yml  VISION.md  published-image-catalog.toml  security-scan-policy.toml
.devcontainer/: Containerfile  devcontainer.json  post-create.sh
.kbriefs/: KB-2026-001-scenario-portability-limits.md  KB-2026-002-uv-python-standard.md  KB-2026-003-containerfile-checksum-failure.md  KB-2026-004-checksum-verification-design-space.md  KB-2026-005-checksum-verification-tradeoffs.md  KB-2026-006-sha256sum-working-directory-failure.md  KB-2026-007-template-portability-failure.md  KB-2026-008-container-architecture-mismatch.md  KB-2026-009-scenario-adoption-barriers.md  KB-2026-010-diagram-image-standard.md  KB-2026-010-interactive-fix-workflow-design.md  KB-2026-011-vscode-podman-host-binding.md  KB-2026-012-diagram-consumer-starter-contract.md  KB-2026-013-risk-driven-cve-management.md  KB-2026-014-cve-inflow-reduction-and-maintenance-economics.md  KB-2026-015-scan-fix-standard-python-remediation-loop.md  KB-2026-016-scan-fix-rollback-state-restoration.md  KB-2026-017-scan-fix-requires-python-resolution-boundary.md  KB-2026-018-automated-python-cve-remediation-standard.md  KB-2026-019-maintainer-github-auth-standard.md  KB-2026-020-dependency-locking-vs-floating-versions.md  KB-2026-021-automatic-upgrade-technologies-and-openrewrite.md  KB-2026-022-framework-lifecycle-governance-and-cve-management.md  KB-2026-024-node-javascript-cve-auto-upgrade-design-space.md  KB-2026-025-trivy-apt-key-rotation-build-failure.md  KB-2026-026-python-image-security-and-remediation-tooling-design-space.md  KB-2026-027-repo-owned-pandoc-feature-vs-external-feature-dependency.md  KB-2026-027-windows-podman-machine-control-path-failure.md  KB-2026-028-fast-default-and-opt-in-integration-test-lanes-for-python-starters.md  KB-2026-028-robust-devcontainer-execution-environment-design-space.md  KB-2026-029-free-local-baseline-vs-robust-remote-control-plane.md  KB-2026-029-testing-engineering-source-profile.md  KB-2026-030-polyglot-testing-taxonomy-and-framework-mapping.md  KB-2026-030-starter-generator-service-design-space.md  KB-2026-031-full-test-bar-vs-fast-default-feedback-loop.md  KB-2026-031-starter-generator-knowledge-gaps-and-learning-cycles.md  KB-2026-032-agent-ready-feature-and-adr-scaffolds.md  KB-2026-032-nested-starter-parent-git-history-scan.md  KB-2026-033-published-maintainer-image-runtime-drift-breaks-root-ci.md  (+55 more)
docs/: README.md  (+2 more)
examples/python-image-example/: .gitignore  README.md  Taskfile.yml  pyproject.toml  tasks.py
examples/python-image-example/.devcontainer/: devcontainer.json
examples/python-image-example/src/python_image_example/: __init__.py
examples/python-image-example/tests/: test_math_ops.py
examples/security-remediation-demo/: README.md  Taskfile.yml  pyproject.toml  scan-policy.toml  tasks.py
examples/security-remediation-demo/src/health_monitor/: __init__.py  checker.py
examples/security-remediation-demo/tests/: test_checker.py
templates/python-api-secure/: .dockerignore  .env.example  .gitignore  README.md  Taskfile.yml  init.sh  pyproject.toml  tasks.py
templates/python-api-secure/.devcontainer/: Containerfile  devcontainer.json
templates/python-api-secure/man/man7/: polyglot-java.7  polyglot-python.7  polyglot-security.7  polyglot-starters.7  polyglot-troubleshooting.7  polyglot.7
templates/python-api-secure/scripts/: evaluate_python_audit_policy.py
templates/python-api-secure/src/python_api_secure_template/: __init__.py  config.py  main.py
templates/python-api-secure/src/python_api_secure_template/routers/: health.py  items.py
templates/python-api-secure/tests/: conftest.py  test_api.py
templates/python-api-secure/tests/acceptance/: __init__.py  test_api_bdd.py
templates/python-api-secure/tests/acceptance/features/: api-health.feature
templates/python-api-secure/tests/property/: test_items_properties.py
templates/python-api-secure/tests/unit/: test_api.py  test_example.py
templates/python-node-secure/: .dockerignore  .gitignore  README.md  Taskfile.yml  eslint.config.mjs  package.json  pyproject.toml  tasks.py  tsconfig.json
templates/python-node-secure/.devcontainer/: Containerfile  bootstrap-workspace.sh  devcontainer.json  post-create.sh
templates/python-node-secure/backend/tests/: test_math_ops.py
templates/python-node-secure/backend/tests/acceptance/: test_addition_bdd.py
templates/python-node-secure/backend/tests/acceptance/features/: addition.feature
templates/python-node-secure/backend/tests/integration/: test_example.py
templates/python-node-secure/backend/tests/property/: test_add_properties.py
templates/python-node-secure/backend/tests/unit/: test_example.py
templates/python-node-secure/frontend/src/: math.ts
templates/python-node-secure/frontend/tests/: math.test.ts
templates/python-node-secure/man/man7/: polyglot-deps.7  polyglot-knowledge.7  polyglot-python.7  polyglot-security.7  polyglot-starters.7  polyglot-task-contract.7  polyglot.7
templates/python-node-secure/scenarios/: non-git-scan-fallback.json  security-evidence.json  starter-health.json
templates/python-node-secure/scripts/: evaluate_python_audit_policy.py  run_scenario.py
templates/python-secure/: .pre-commit-config.yaml  README.md  Taskfile.yml  init.sh  pyproject.toml  security-scan-policy.toml  tasks.py
templates/python-secure/.devcontainer/: Containerfile  devcontainer.json
templates/python-secure/man/man7/: polyglot-agents.7  polyglot-java.7  polyglot-python.7  polyglot-security.7  polyglot-troubleshooting.7
templates/python-secure/tests/: test_math_ops.py
templates/python-secure/tests/acceptance/: test_addition_bdd.py
templates/python-secure/tests/acceptance/features/: addition.feature
templates/python-secure/tests/property/: test_add_properties.py
templates/python-secure/tests/unit/: test_example.py
(+319 files in other folders)
