[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "python-image-example"
version = "0.1.0"
description = "Minimal Python example that consumes the published Python and Node image."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy==1.17.1",
  "pip-audit==2.8.0",
  "pre-commit==4.2.0",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "ruff==0.12.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=python_image_example --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests", "tasks.py"]
