[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "python-api-secure-template"
version = "0.1.0"
description = "Secure Python FastAPI starter template."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.6",
  "pydantic-settings==2.7.1",
  "sqlalchemy==2.0.36",
  "alembic==1.14.0",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "python-multipart==0.0.20",
]

[project.optional-dependencies]
dev = [
  "mypy==1.17.1",
  "pip-audit==2.8.0",
  "pre-commit==4.2.0",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "ruff==0.12.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=python_api_secure_template --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests", "tasks.py"]
