[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "python-node-secure-template"
version = "0.1.0"
description = "Secure Python and Node / TypeScript starter template."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy==1.17.1",
  "pip-audit==2.8.0",
  "pre-commit==4.2.0",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "ruff==0.12.0"
]

[tool.setuptools]
package-dir = {"" = "backend/src"}

[tool.setuptools.packages.find]
where = ["backend/src"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
markers = [
  "integration: marks tests that call external resources (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["backend/src", "backend/tests", "tasks.py"]
