[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "python-secure-template"
version = "0.1.0"
description = "Secure Python starter template."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "python-jose[cryptography]>=3.4.0",
]

[project.optional-dependencies]
dev = [
  "hypothesis==6.152.2",
  "mypy==1.17.1",
  "pip-audit==2.8.0",
  "pre-commit==4.2.0",
  "pytest==8.4.1",
  "pytest-bdd==8.1.0",
  "pytest-cov==6.2.1",
  "pytest-xdist==3.8.0",
  "ruff==0.12.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
bdd_features_base_dir = "tests/acceptance/features"
addopts = ["--strict-markers"]
markers = [
  "integration: marks tests that call external resources (deselect with -m 'not integration')",
  "acceptance: marks executable specification and BDD tests",
  "property: marks property-based tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests", "tasks.py"]
